FISH-8652: Expand var.
Expands the var keyword in all cases where the type can be currently inferred, covers the majority of instances where var is used.